# langgraph-nl2sql-system

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.tools  README.md  db.py  docker-compose.yml  main.py  pyproject.toml  settings.py  tools_api.py
.streamlit/: config.toml
agents/: __init__.py  query_agent.py  schema_agent.py
docs/: demo-script.md  report.md
graph/: __init__.py  query_edges.py  query_graph.py  query_nodes.py  query_state.py  schema_edges.py  schema_format.py  schema_graph.py  schema_nodes.py  schema_state.py  workflow.py
llm/: __init__.py  chat_model.py
memory/: __init__.py  memoria_diseno.txt  persistent_store.py  schema_docs_store.py  session_store.py  trace.py  working.py
observability/: __init__.py  langsmith_setup.py  mcp_tracing.py
prompts/: README.md  query_agent.py  schema_agent.py  schema_agent_system.md  security.py
scripts/: bootstrap_dvdrental.md  demo.py
scripts/sql/: 001_restore_dvdrental.sh  bootstrap_minimal_dvdrental.sql  readonly_guardrail.sql
streamlit_app/: __init__.py  api_client.py  app.py  config_ui.py  styles.css
tests/: test_f_health.py  test_in_db_connectivity.py  test_in_mcp_tools.py  test_in_memory_query.py  test_in_query_agent.py  test_u_mcp_schema_tool.py  test_u_persistent_store.py  test_u_query_agent.py  test_u_schema_edges.py  test_u_schema_format.py  test_u_schema_graph_flow.py  test_u_schema_merge.py  test_u_schema_store.py  test_u_session_store.py  test_u_settings.py  test_u_sql_guard.py  test_u_working_memory.py
tools/: __init__.py  http_client.py  mcp_schema_tool.py  mcp_sql_tool.py  service.py  sql_guard.py
